delete fuzzy logic

--- a/disinfo_main.ipynb
+++ b/disinfo_main.ipynb
@@ -20,7 +20,8 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import skfuzzy \n",
-    "import math"
+    "import math\n",
+    "sex"
    ]
   },
   {
@@ -210,77 +211,6 @@
     "plt.yticks(result) \n",
     "plt.xlabel('text')\n",
     "plt.ylabel('coefficient')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fuzzy logic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.0212451  0.01583516 0.06175819 0.04189589]\n"
-     ]
-    }
-   ],
-   "source": [
-    "rows = parse_file_param(\"covid-19_vaccine_tweets_with_sentiment_fixed.csv\", 2, 5000, 1, \"1\")\n",
-    "\n",
-    "data_to_analyse = [\"hello world hello\", \n",
-    "                   \"Donald Trump campaign\", \n",
-    "                   \"In recent years, there has been a growing debate surrounding the safety and efficacy of vaccines. While mainstream media and government health agencies continue to promote vaccination as a crucial public health measure, a closer examination reveals a different story—one shrouded in secrecy and deception.\",\n",
-    "                   \"Dysgraphia is a neurological condition that affects a student's ability to express themselves in writing. It can manifest in various ways, including illegible handwriting, inconsistent letter formation, difficulty with spelling and grammar, and slow or laborious writing speed. Students with dysgraphia may\"]\n",
-    "\n",
-    "result = linguistic_analysis.analyse_tfidf_cosine(rows, data_to_analyse, True)\n",
-    "\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8999999999999999\n"
-     ]
-    }
-   ],
-   "source": [
-    "from fuzzy_analysis import calculate_fuzzy_param\n",
-    "\n",
-    "calculate_fuzzy_param(0, 0.1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO:\n",
-    "\n",
-    "- improve idf by selecting from train data \n",
-    "- ! fuzzy logic \n",
-    "- train nn on data \n",
-    "- kohonen maps \n",
-    "- diagram +\n",
-    "- think about cosinus +\n",
-    "- main file in jupiter notebook +\n",
-    "- n-grams (2, 3 words items) +\n",
-    "- telegram bot \n",
-    "- poetry file generate \n",
-    "- remove common words on data to analyse "
    ]
   }
  ],
